<resources>
    <string name="app_name">Utilities</string>
    <string name="calculator">Calculator</string>
    <string name="notes">Notes</string>
    <string name="appTitle">Utilities</string>
    <string name="files">Files</string>
    <string name="hint">Type here…</string>

    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="newNote">New note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="parOpen">(</string>
    <string name="parClosed">)</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="diminish">-</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="add">+</string>
    <string name="title_activity_note_select">NoteSelect</string>

</resources>
